--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ Sistema.data
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+build/classes/.netbeans_automatic_build
+build/classes/.netbeans_update_resources
+nbproject/private/private.properties
+nbproject/private/private.xml
