Cambio en Alimento: Se cambian los tipos de las listas de ArrayList (implementacion) a List (interfaz) Cambio en Persona: Se cambian los mensajes a constantes definidas Cambio en ventana menu principla prof: Se cambia el texto "Lunes" repetido por una constante STARTING_DAY

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ build/classes/.netbeans_automatic_build
 build/classes/.netbeans_update_resources
 nbproject/private/private.properties
 nbproject/private/private.xml
+/dist/
+build/built-jar.properties
