Solucionados los codeSmells de nivel Minor del Dominio

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ nbproject/private/private.properties
 nbproject/private/private.xml
 /dist/
 build/built-jar.properties
+sonar-project.properties
+.scannerwork/.sonar_lock
+.scannerwork/report-task.txt
